# src/notifications/notifications.controller.ts
@@ -1,9 +1,12 @@
-import { Body, Controller, Get, Post, ValidationPipe } from '@nestjs/common';
+import { Body, Controller, Get, Post, Query, ValidationPipe } from '@nestjs/common';
 import { CreateNotificationDto } from './dto/create-noti.dto';
 import { NotificationsService } from './notifications.service';
 import { Auth } from 'src/auth/auth.decorator';
 import { ReqUser } from 'src/auth/req-user.decorator';
 import type { RequestUser } from 'src/auth/request-user.interface';
+import { GetNotisDto } from './dto/get-Notis.dto';
+import { ApiOperation, ApiResponse } from '@nestjs/swagger';
+import { PaginatedNotificationResponse } from './dto/noti-response.dto';
 
 @Controller('notifications')
 export class NotificationsController {
@@ -11,8 +14,10 @@ export class NotificationsController {
 
     @Auth()
     @Get()
-    getNotifications(@ReqUser() user: RequestUser) {
-        return this.notificationService.getNotifications(user)
+    @ApiOperation({ summary: 'Get all notifications', description: "Return notifications for requested user" })
+    @ApiResponse({ status: 200, description: 'Notifications retrieved', type: PaginatedNotificationResponse })
+    getNotifications(@Query(ValidationPipe) getNotisDto: GetNotisDto, @ReqUser() user: RequestUser): Promise<PaginatedNotificationResponse> {
+        return this.notificationService.getNotifications(getNotisDto, user)
     }
 
     @Auth()
